running latest commands

--- a/notebooks/2_Challenge1_Experiments2.ipynb
+++ b/notebooks/2_Challenge1_Experiments2.ipynb
@@ -5241,6 +5241,7 @@
    ],
    "source": [
     "# ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-24_2131_VGG16_BN_Attention/\n",
+    "# BEST MODEL\n",
     "command = 'python ../train_cv.py --train_path \"../datasets/challenge1/train\" \\\n",
     "                        --train_masks_path \"../datasets_masks/challenge1/train\" \\\n",
     "                        --valid_masks_path \"../datasets_masks/challenge1/val\"\\\n",
@@ -5438,9 +5439,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Namespace(test_path='../datasets/challenge1/val', output='outputs', experiment_name='ClassifierSegExperimentCV', network_name='VGG16_BN_Attention', max_epochs=50, batch_size=32, base_lr=1e-05, img_size=224, seed=42, timeframe='2023-12-24_2131', verbose=2, multi=False, report=True, ensemble=True, combination_strategy='majority_vote', upscale_factor=8, gradcam=True)\n",
+      "Constructed output path: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-24_2131_VGG16_BN_Attention. Searching for models...\n",
+      "Found 5 models.\n",
+      "Loading data with 2 class labels from ../datasets/challenge1/val path...\n",
+      "Dataset labels: {'nevus': 0, 'others': 1} dictionary.\n",
+      "Loading the data from ../datasets/challenge1/val\n",
+      "Dataset length: 3796\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "\n",
+      "Inference:   0%|          | 0/119 [00:00<?, ?it/s]\n",
+      "Inference:   1%|          | 1/119 [01:04<2:06:27, 64.30s/it]\n",
+      "Inference:   2%|▏         | 2/119 [01:06<54:26, 27.92s/it]  \n",
+      "Inference:   3%|▎         | 3/119 [01:09<31:21, 16.22s/it]\n",
+      "Inference:   3%|▎         | 4/119 [01:11<20:37, 10.76s/it]\n",
+      "Inference:   4%|▍         | 5/119 [01:13<14:44,  7.76s/it]\n",
+      "Inference:   5%|▌         | 6/119 [01:16<11:17,  6.00s/it]\n",
+      "Inference:   6%|▌         | 7/119 [01:18<08:59,  4.82s/it]\n",
+      "Inference:   7%|▋         | 8/119 [01:21<07:25,  4.02s/it]\n",
+      "Inference:   8%|▊         | 9/119 [01:23<06:25,  3.51s/it]\n",
+      "Inference:   8%|▊         | 10/119 [01:25<05:40,  3.12s/it]\n",
+      "Inference:   9%|▉         | 11/119 [01:28<05:07,  2.85s/it]\n",
+      "Inference:  10%|█         | 12/119 [01:30<04:46,  2.68s/it]\n",
+      "Inference:  11%|█         | 13/119 [01:32<04:31,  2.56s/it]\n",
+      "Inference:  12%|█▏        | 14/119 [01:34<04:19,  2.47s/it]\n",
+      "Inference:  13%|█▎        | 15/119 [01:37<04:21,  2.52s/it]\n",
+      "Inference:  13%|█▎        | 16/119 [01:41<04:52,  2.84s/it]\n",
+      "Inference:  14%|█▍        | 17/119 [01:45<05:45,  3.39s/it]\n",
+      "Inference:  15%|█▌        | 18/119 [01:49<05:53,  3.50s/it]\n",
+      "Inference:  16%|█▌        | 19/119 [01:54<06:43,  4.03s/it]\n",
+      "Inference:  17%|█▋        | 20/119 [01:58<06:16,  3.80s/it]\n",
+      "Inference:  18%|█▊        | 21/119 [02:00<05:42,  3.50s/it]\n",
+      "Inference:  18%|█▊        | 22/119 [02:03<05:15,  3.26s/it]\n",
+      "Inference:  19%|█▉        | 23/119 [02:06<04:56,  3.08s/it]\n",
+      "Inference:  20%|██        | 24/119 [02:08<04:42,  2.97s/it]\n",
+      "Inference:  21%|██        | 25/119 [02:11<04:31,  2.89s/it]\n",
+      "Inference:  22%|██▏       | 26/119 [02:14<04:24,  2.84s/it]\n",
+      "Inference:  23%|██▎       | 27/119 [02:16<04:16,  2.79s/it]\n",
+      "Inference:  24%|██▎       | 28/119 [02:19<04:09,  2.74s/it]\n",
+      "Inference:  24%|██▍       | 29/119 [02:22<04:05,  2.73s/it]\n",
+      "Inference:  25%|██▌       | 30/119 [02:24<04:00,  2.71s/it]\n",
+      "Inference:  26%|██▌       | 31/119 [02:27<03:55,  2.68s/it]\n",
+      "Inference:  27%|██▋       | 32/119 [02:30<03:54,  2.70s/it]\n",
+      "Inference:  28%|██▊       | 33/119 [02:32<03:50,  2.68s/it]\n",
+      "Inference:  29%|██▊       | 34/119 [02:35<03:47,  2.68s/it]\n",
+      "Inference:  29%|██▉       | 35/119 [02:38<03:46,  2.70s/it]\n",
+      "Inference:  30%|███       | 36/119 [02:41<03:41,  2.67s/it]\n",
+      "Inference:  31%|███       | 37/119 [02:43<03:31,  2.58s/it]\n",
+      "Inference:  32%|███▏      | 38/119 [02:45<03:24,  2.53s/it]\n",
+      "Inference:  33%|███▎      | 39/119 [02:48<03:19,  2.50s/it]\n",
+      "Inference:  34%|███▎      | 40/119 [02:50<03:14,  2.47s/it]\n",
+      "Inference:  34%|███▍      | 41/119 [02:53<03:10,  2.45s/it]\n",
+      "Inference:  35%|███▌      | 42/119 [02:55<03:08,  2.44s/it]\n",
+      "Inference:  36%|███▌      | 43/119 [02:57<03:03,  2.41s/it]\n",
+      "Inference:  37%|███▋      | 44/119 [03:00<02:59,  2.39s/it]\n",
+      "Inference:  38%|███▊      | 45/119 [03:02<02:55,  2.37s/it]\n",
+      "Inference:  39%|███▊      | 46/119 [03:04<02:53,  2.38s/it]\n",
+      "Inference:  39%|███▉      | 47/119 [03:07<02:53,  2.41s/it]\n",
+      "Inference:  40%|████      | 48/119 [03:09<02:50,  2.40s/it]\n",
+      "Inference:  41%|████      | 49/119 [03:12<02:46,  2.38s/it]\n",
+      "Inference:  42%|████▏     | 50/119 [03:14<02:44,  2.38s/it]\n",
+      "Inference:  43%|████▎     | 51/119 [03:16<02:42,  2.39s/it]\n",
+      "Inference:  44%|████▎     | 52/119 [03:19<02:43,  2.43s/it]\n",
+      "Inference:  45%|████▍     | 53/119 [03:21<02:39,  2.41s/it]\n",
+      "Inference:  45%|████▌     | 54/119 [03:24<02:36,  2.41s/it]\n",
+      "Inference:  46%|████▌     | 55/119 [03:26<02:32,  2.38s/it]\n",
+      "Inference:  47%|████▋     | 56/119 [03:28<02:30,  2.39s/it]\n",
+      "Inference:  48%|████▊     | 57/119 [03:31<02:28,  2.39s/it]\n",
+      "Inference:  49%|████▊     | 58/119 [03:33<02:25,  2.38s/it]\n",
+      "Inference:  50%|████▉     | 59/119 [03:36<02:23,  2.39s/it]\n",
+      "Inference:  50%|█████     | 60/119 [03:38<02:21,  2.40s/it]\n",
+      "Inference:  51%|█████▏    | 61/119 [03:40<02:19,  2.41s/it]\n",
+      "Inference:  52%|█████▏    | 62/119 [03:43<02:16,  2.39s/it]\n",
+      "Inference:  53%|█████▎    | 63/119 [03:45<02:14,  2.39s/it]\n",
+      "Inference:  54%|█████▍    | 64/119 [03:47<02:10,  2.38s/it]\n",
+      "Inference:  55%|█████▍    | 65/119 [03:50<02:07,  2.36s/it]\n",
+      "Inference:  55%|█████▌    | 66/119 [03:52<02:05,  2.36s/it]\n",
+      "Inference:  56%|█████▋    | 67/119 [03:55<02:02,  2.36s/it]\n",
+      "Inference:  57%|█████▋    | 68/119 [03:57<02:01,  2.39s/it]\n",
+      "Inference:  58%|█████▊    | 69/119 [03:59<01:59,  2.38s/it]\n",
+      "Inference:  59%|█████▉    | 70/119 [04:02<01:56,  2.37s/it]\n",
+      "Inference:  60%|█████▉    | 71/119 [04:04<01:54,  2.38s/it]\n",
+      "Inference:  61%|██████    | 72/119 [04:07<01:52,  2.40s/it]\n",
+      "Inference:  61%|██████▏   | 73/119 [04:09<01:49,  2.39s/it]\n",
+      "Inference:  62%|██████▏   | 74/119 [04:12<01:53,  2.52s/it]\n",
+      "Inference:  63%|██████▎   | 75/119 [04:14<01:51,  2.53s/it]\n",
+      "Inference:  64%|██████▍   | 76/119 [04:17<01:47,  2.50s/it]\n",
+      "Inference:  65%|██████▍   | 77/119 [04:19<01:44,  2.49s/it]\n",
+      "Inference:  66%|██████▌   | 78/119 [04:21<01:40,  2.45s/it]\n",
+      "Inference:  66%|██████▋   | 79/119 [04:24<01:36,  2.41s/it]\n",
+      "Inference:  67%|██████▋   | 80/119 [04:26<01:33,  2.40s/it]\n",
+      "Inference:  68%|██████▊   | 81/119 [04:28<01:30,  2.37s/it]\n",
+      "Inference:  69%|██████▉   | 82/119 [04:31<01:26,  2.35s/it]\n",
+      "Inference:  70%|██████▉   | 83/119 [04:33<01:24,  2.34s/it]\n",
+      "Inference:  71%|███████   | 84/119 [04:35<01:21,  2.33s/it]\n",
+      "Inference:  71%|███████▏  | 85/119 [04:38<01:18,  2.31s/it]\n",
+      "Inference:  72%|███████▏  | 86/119 [04:40<01:15,  2.30s/it]\n",
+      "Inference:  73%|███████▎  | 87/119 [04:42<01:13,  2.29s/it]\n",
+      "Inference:  74%|███████▍  | 88/119 [04:45<01:11,  2.32s/it]\n",
+      "Inference:  75%|███████▍  | 89/119 [04:47<01:09,  2.33s/it]\n",
+      "Inference:  76%|███████▌  | 90/119 [04:49<01:07,  2.33s/it]\n",
+      "Inference:  76%|███████▋  | 91/119 [04:52<01:04,  2.31s/it]\n",
+      "Inference:  77%|███████▋  | 92/119 [04:54<01:02,  2.31s/it]\n",
+      "Inference:  78%|███████▊  | 93/119 [04:56<01:00,  2.33s/it]\n",
+      "Inference:  79%|███████▉  | 94/119 [04:59<00:59,  2.40s/it]\n",
+      "Inference:  80%|███████▉  | 95/119 [05:02<01:00,  2.51s/it]\n",
+      "Inference:  81%|████████  | 96/119 [05:04<00:59,  2.60s/it]\n",
+      "Inference:  82%|████████▏ | 97/119 [05:08<01:00,  2.77s/it]\n",
+      "Inference:  82%|████████▏ | 98/119 [05:10<00:54,  2.62s/it]\n",
+      "Inference:  83%|████████▎ | 99/119 [05:12<00:50,  2.54s/it]\n",
+      "Inference:  84%|████████▍ | 100/119 [05:15<00:48,  2.58s/it]\n",
+      "Inference:  85%|████████▍ | 101/119 [05:17<00:46,  2.56s/it]\n",
+      "Inference:  86%|████████▌ | 102/119 [05:20<00:42,  2.50s/it]\n",
+      "Inference:  87%|████████▋ | 103/119 [05:22<00:38,  2.43s/it]\n",
+      "Inference:  87%|████████▋ | 104/119 [05:24<00:36,  2.44s/it]\n",
+      "Inference:  88%|████████▊ | 105/119 [05:27<00:34,  2.49s/it]\n",
+      "Inference:  89%|████████▉ | 106/119 [05:30<00:32,  2.54s/it]\n",
+      "Inference:  90%|████████▉ | 107/119 [05:32<00:30,  2.54s/it]\n",
+      "Inference:  91%|█████████ | 108/119 [05:35<00:27,  2.46s/it]\n",
+      "Inference:  92%|█████████▏| 109/119 [05:37<00:24,  2.44s/it]\n",
+      "Inference:  92%|█████████▏| 110/119 [05:39<00:21,  2.42s/it]\n",
+      "Inference:  93%|█████████▎| 111/119 [05:42<00:19,  2.39s/it]\n",
+      "Inference:  94%|█████████▍| 112/119 [05:44<00:16,  2.36s/it]\n",
+      "Inference:  95%|█████████▍| 113/119 [05:46<00:13,  2.32s/it]\n",
+      "Inference:  96%|█████████▌| 114/119 [05:48<00:11,  2.32s/it]\n",
+      "Inference:  97%|█████████▋| 115/119 [05:51<00:09,  2.32s/it]\n",
+      "Inference:  97%|█████████▋| 116/119 [05:53<00:06,  2.32s/it]\n",
+      "Inference:  98%|█████████▊| 117/119 [05:55<00:04,  2.32s/it]\n",
+      "Inference:  99%|█████████▉| 118/119 [05:58<00:02,  2.35s/it]\n",
+      "Inference: 100%|██████████| 119/119 [06:01<00:00,  2.72s/it]\n",
+      "Inference: 100%|██████████| 119/119 [06:01<00:00,  3.04s/it]\n",
+      "all_predictions shape: (5, 3796)\n",
+      "all_probabilities shape: (5, 3796, 2)\n",
+      "Combination strategy is majority_vote. Computing the majority vote...\n",
+      "Average probabilities: [[9.7395945e-01 2.6040614e-02]\n",
+      " [9.9934828e-01 6.5178249e-04]\n",
+      " [9.9831951e-01 1.6804235e-03]\n",
+      " ...\n",
+      " [4.9509979e-03 9.9504900e-01]\n",
+      " [9.1613695e-02 9.0838635e-01]\n",
+      " [6.8305461e-03 9.9316949e-01]]\n",
+      "Results exported to: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-24_2131_VGG16_BN_Attention/ch1_majority_vote_val_ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42_2023-12-24_2131_VGG16_BN_Attention.csv\n",
+      "Figure(1500x600)\n",
+      "Majority vote AUC: 0.93481\n",
+      "Majority vote accuracy: 0.9351949420442571\n",
+      "Majority vote kappa: 0.8702555801788158\n",
+      "Target 0 - Precision: 0.91895, Recall: 0.95702, F-score: 0.93760, Sensitivity: 0.9570170895908856, Specificity: 0.9126005361930295, Support: 1931\n",
+      "Target 1 - Precision: 0.95350, Recall: 0.91260, F-score: 0.93260, Sensitivity: 0.9126005361930295, Specificity: 0.9570170895908856, Support: 1865\n",
+      "(   {   'accuracy': 0.9351949420442571,\n",
+      "        'auc': 0.9348088128919575,\n",
+      "        'fscore': [0.9375951293759514, 0.9326027397260275],\n",
+      "        'kappa': 0.8702555801788158,\n",
+      "        'precision': [0.9189457981103928, 0.9535014005602241],\n",
+      "        'recall': [0.9570170895908856, 0.9126005361930295],\n",
+      "        'sensitivity': [0.9570170895908856, 0.9126005361930295],\n",
+      "        'specificity': [0.9126005361930295, 0.9570170895908856],\n",
+      "        'support': [1931, 1865]},)\n"
+     ]
+    }
+   ],
    "source": [
     "# command = 'python ../inference.py --test_path \"../datasets/challenge1/val\" \\\n",
     "#                     --experiment_name \"ClassifierSegExperimentCV\" \\\n",
@@ -5463,8 +5632,32 @@
     "#                     --verbose \"2\" \\\n",
     "#                     --ensemble'\n",
     "\n",
+    "# command = 'python ../inference.py --test_path \"../datasets/challenge1/val\" \\\n",
+    "#                     --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "#                     --network_name \"VGG16_BN_Attention\" \\\n",
+    "#                     --max_epochs \"50\" \\\n",
+    "#                     --base_lr \"0.00001\" \\\n",
+    "#                     --batch_size \"32\" \\\n",
+    "#                     --timeframe \"2023-12-24_2131\" \\\n",
+    "#                     --verbose \"2\" \\\n",
+    "#                     --ensemble \\\n",
+    "#                     --report \\\n",
+    "#                     --combination_strategy \"weighted_voting\"'\n",
+    "\n",
+    "command = 'python ../inference.py --test_path \"../datasets/challenge1/val\" \\\n",
+    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2023-12-24_2131\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --ensemble \\\n",
+    "                    --report \\\n",
+    "                    --gradcam'\n",
+    "\n",
     "# run the function to excute the command\n",
-    "# _ = execute_cmd_realtime(command, log=True)"
+    "_ = execute_cmd_realtime(command, log=True)"
    ]
   },
   {
