last run binary ensemble

--- a/notebooks/2_Challenge1_Experiments2.ipynb
+++ b/notebooks/2_Challenge1_Experiments2.ipynb
@@ -10094,6 +10094,219 @@
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final training for this challenge, was trained on the server but didn't improve the results\n",
+    "# ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2024-01-07_0851_VGG16_BN_Attention\n",
+    "command = 'python ../train_cv.py --train_path \"../datasets/challenge1/train\" \\\n",
+    "                        --train_masks_path \"../datasets_masks/challenge1/train\" \\\n",
+    "                        --valid_masks_path \"../datasets_masks/challenge1/val\"\\\n",
+    "                        --valid_path \"../datasets/challenge1/val\" \\\n",
+    "                        --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                        --network_name \"VGG16_BN_Attention\" \\\n",
+    "                        --max_epochs \"50\" \\\n",
+    "                        --base_lr \"0.00001\" \\\n",
+    "                        --num_folds \"5\" \\\n",
+    "                        --batch_size \"32\" \\\n",
+    "                        --verbose \"2\"'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Namespace(test_path='../datasets/challenge1/val', output='outputs', experiment_name='ClassifierSegExperimentCV', network_name='VGG16_BN_Attention', max_epochs=50, batch_size=32, base_lr=1e-05, img_size=224, seed=42, timeframe='2024-01-07_0851', verbose=2, multi=False, report=True, ensemble=True, combination_strategy='majority_vote', upscale_factor=8, gradcam=False)\n",
+      "Constructed output path: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2024-01-07_0851_VGG16_BN_Attention. Searching for models...\n",
+      "Found 5 models.\n",
+      "Loading data with 2 class labels from ../datasets/challenge1/val path...\n",
+      "Dataset labels: {'nevus': 0, 'others': 1} dictionary.\n",
+      "Loading the data from ../datasets/challenge1/val\n",
+      "Dataset length: 3796\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "\n",
+      "Inference:   0%|          | 0/119 [00:00<?, ?it/s]\n",
+      "Inference:   1%|          | 1/119 [02:14<4:24:08, 134.31s/it]\n",
+      "Inference:   2%|▏         | 2/119 [02:15<1:48:45, 55.78s/it] \n",
+      "Inference:   3%|▎         | 3/119 [02:15<59:17, 30.67s/it]  \n",
+      "Inference:   3%|▎         | 4/119 [02:16<36:09, 18.87s/it]\n",
+      "Inference:   4%|▍         | 5/119 [02:17<23:26, 12.34s/it]\n",
+      "Inference:   5%|▌         | 6/119 [02:18<15:49,  8.40s/it]\n",
+      "Inference:   6%|▌         | 7/119 [02:18<10:59,  5.89s/it]\n",
+      "Inference:   7%|▋         | 8/119 [02:19<07:50,  4.24s/it]\n",
+      "Inference:   8%|▊         | 9/119 [02:20<05:44,  3.13s/it]\n",
+      "Inference:   8%|▊         | 10/119 [02:21<04:19,  2.38s/it]\n",
+      "Inference:   9%|▉         | 11/119 [02:21<03:20,  1.85s/it]\n",
+      "Inference:  10%|█         | 12/119 [02:22<02:39,  1.49s/it]\n",
+      "Inference:  11%|█         | 13/119 [02:22<02:11,  1.24s/it]\n",
+      "Inference:  12%|█▏        | 14/119 [02:23<01:51,  1.06s/it]\n",
+      "Inference:  13%|█▎        | 15/119 [02:24<01:37,  1.07it/s]\n",
+      "Inference:  13%|█▎        | 16/119 [02:24<01:27,  1.18it/s]\n",
+      "Inference:  14%|█▍        | 17/119 [02:25<01:20,  1.26it/s]\n",
+      "Inference:  15%|█▌        | 18/119 [02:26<01:15,  1.34it/s]\n",
+      "Inference:  16%|█▌        | 19/119 [02:26<01:11,  1.39it/s]\n",
+      "Inference:  17%|█▋        | 20/119 [02:27<01:09,  1.43it/s]\n",
+      "Inference:  18%|█▊        | 21/119 [02:28<01:06,  1.47it/s]\n",
+      "Inference:  18%|█▊        | 22/119 [02:28<01:05,  1.49it/s]\n",
+      "Inference:  19%|█▉        | 23/119 [02:29<01:03,  1.51it/s]\n",
+      "Inference:  20%|██        | 24/119 [02:30<01:02,  1.52it/s]\n",
+      "Inference:  21%|██        | 25/119 [02:30<01:01,  1.53it/s]\n",
+      "Inference:  22%|██▏       | 26/119 [02:31<01:00,  1.54it/s]\n",
+      "Inference:  23%|██▎       | 27/119 [02:32<00:59,  1.54it/s]\n",
+      "Inference:  24%|██▎       | 28/119 [02:32<00:58,  1.54it/s]\n",
+      "Inference:  24%|██▍       | 29/119 [02:33<00:58,  1.54it/s]\n",
+      "Inference:  25%|██▌       | 30/119 [02:33<00:57,  1.54it/s]\n",
+      "Inference:  26%|██▌       | 31/119 [02:34<00:57,  1.54it/s]\n",
+      "Inference:  27%|██▋       | 32/119 [02:35<00:56,  1.54it/s]\n",
+      "Inference:  28%|██▊       | 33/119 [02:35<00:55,  1.54it/s]\n",
+      "Inference:  29%|██▊       | 34/119 [02:36<00:55,  1.55it/s]\n",
+      "Inference:  29%|██▉       | 35/119 [02:37<00:54,  1.55it/s]\n",
+      "Inference:  30%|███       | 36/119 [02:37<00:53,  1.55it/s]\n",
+      "Inference:  31%|███       | 37/119 [02:38<00:53,  1.54it/s]\n",
+      "Inference:  32%|███▏      | 38/119 [02:39<00:52,  1.54it/s]\n",
+      "Inference:  33%|███▎      | 39/119 [02:39<00:51,  1.54it/s]\n",
+      "Inference:  34%|███▎      | 40/119 [02:40<00:51,  1.54it/s]\n",
+      "Inference:  34%|███▍      | 41/119 [02:41<00:50,  1.54it/s]\n",
+      "Inference:  35%|███▌      | 42/119 [02:41<00:49,  1.54it/s]\n",
+      "Inference:  36%|███▌      | 43/119 [02:42<00:49,  1.54it/s]\n",
+      "Inference:  37%|███▋      | 44/119 [02:43<00:48,  1.54it/s]\n",
+      "Inference:  38%|███▊      | 45/119 [02:43<00:47,  1.55it/s]\n",
+      "Inference:  39%|███▊      | 46/119 [02:44<00:47,  1.55it/s]\n",
+      "Inference:  39%|███▉      | 47/119 [02:45<00:46,  1.55it/s]\n",
+      "Inference:  40%|████      | 48/119 [02:45<00:45,  1.55it/s]\n",
+      "Inference:  41%|████      | 49/119 [02:46<00:45,  1.55it/s]\n",
+      "Inference:  42%|████▏     | 50/119 [02:46<00:44,  1.55it/s]\n",
+      "Inference:  43%|████▎     | 51/119 [02:47<00:43,  1.55it/s]\n",
+      "Inference:  44%|████▎     | 52/119 [02:48<00:43,  1.55it/s]\n",
+      "Inference:  45%|████▍     | 53/119 [02:48<00:42,  1.55it/s]\n",
+      "Inference:  45%|████▌     | 54/119 [02:49<00:42,  1.54it/s]\n",
+      "Inference:  46%|████▌     | 55/119 [02:50<00:41,  1.54it/s]\n",
+      "Inference:  47%|████▋     | 56/119 [02:50<00:40,  1.54it/s]\n",
+      "Inference:  48%|████▊     | 57/119 [02:51<00:40,  1.54it/s]\n",
+      "Inference:  49%|████▊     | 58/119 [02:52<00:39,  1.54it/s]\n",
+      "Inference:  50%|████▉     | 59/119 [02:52<00:38,  1.54it/s]\n",
+      "Inference:  50%|█████     | 60/119 [02:53<00:38,  1.54it/s]\n",
+      "Inference:  51%|█████▏    | 61/119 [02:54<00:37,  1.54it/s]\n",
+      "Inference:  52%|█████▏    | 62/119 [02:54<00:37,  1.53it/s]\n",
+      "Inference:  53%|█████▎    | 63/119 [02:55<00:36,  1.54it/s]\n",
+      "Inference:  54%|█████▍    | 64/119 [02:56<00:35,  1.54it/s]\n",
+      "Inference:  55%|█████▍    | 65/119 [02:56<00:35,  1.54it/s]\n",
+      "Inference:  55%|█████▌    | 66/119 [02:57<00:34,  1.54it/s]\n",
+      "Inference:  56%|█████▋    | 67/119 [02:57<00:33,  1.54it/s]\n",
+      "Inference:  57%|█████▋    | 68/119 [02:58<00:33,  1.53it/s]\n",
+      "Inference:  58%|█████▊    | 69/119 [02:59<00:32,  1.53it/s]\n",
+      "Inference:  59%|█████▉    | 70/119 [02:59<00:31,  1.53it/s]\n",
+      "Inference:  60%|█████▉    | 71/119 [03:00<00:31,  1.53it/s]\n",
+      "Inference:  61%|██████    | 72/119 [03:01<00:30,  1.53it/s]\n",
+      "Inference:  61%|██████▏   | 73/119 [03:01<00:30,  1.53it/s]\n",
+      "Inference:  62%|██████▏   | 74/119 [03:02<00:29,  1.53it/s]\n",
+      "Inference:  63%|██████▎   | 75/119 [03:03<00:28,  1.53it/s]\n",
+      "Inference:  64%|██████▍   | 76/119 [03:03<00:28,  1.53it/s]\n",
+      "Inference:  65%|██████▍   | 77/119 [03:04<00:27,  1.54it/s]\n",
+      "Inference:  66%|██████▌   | 78/119 [03:05<00:26,  1.54it/s]\n",
+      "Inference:  66%|██████▋   | 79/119 [03:05<00:25,  1.54it/s]\n",
+      "Inference:  67%|██████▋   | 80/119 [03:06<00:25,  1.54it/s]\n",
+      "Inference:  68%|██████▊   | 81/119 [03:07<00:24,  1.54it/s]\n",
+      "Inference:  69%|██████▉   | 82/119 [03:07<00:24,  1.54it/s]\n",
+      "Inference:  70%|██████▉   | 83/119 [03:08<00:23,  1.53it/s]\n",
+      "Inference:  71%|███████   | 84/119 [03:09<00:22,  1.53it/s]\n",
+      "Inference:  71%|███████▏  | 85/119 [03:09<00:22,  1.52it/s]\n",
+      "Inference:  72%|███████▏  | 86/119 [03:10<00:21,  1.52it/s]\n",
+      "Inference:  73%|███████▎  | 87/119 [03:11<00:21,  1.52it/s]\n",
+      "Inference:  74%|███████▍  | 88/119 [03:11<00:20,  1.52it/s]\n",
+      "Inference:  75%|███████▍  | 89/119 [03:12<00:19,  1.52it/s]\n",
+      "Inference:  76%|███████▌  | 90/119 [03:13<00:19,  1.52it/s]\n",
+      "Inference:  76%|███████▋  | 91/119 [03:13<00:18,  1.52it/s]\n",
+      "Inference:  77%|███████▋  | 92/119 [03:14<00:17,  1.52it/s]\n",
+      "Inference:  78%|███████▊  | 93/119 [03:15<00:17,  1.52it/s]\n",
+      "Inference:  79%|███████▉  | 94/119 [03:15<00:16,  1.52it/s]\n",
+      "Inference:  80%|███████▉  | 95/119 [03:16<00:15,  1.52it/s]\n",
+      "Inference:  81%|████████  | 96/119 [03:16<00:15,  1.52it/s]\n",
+      "Inference:  82%|████████▏ | 97/119 [03:17<00:14,  1.53it/s]\n",
+      "Inference:  82%|████████▏ | 98/119 [03:18<00:13,  1.52it/s]\n",
+      "Inference:  83%|████████▎ | 99/119 [03:18<00:13,  1.53it/s]\n",
+      "Inference:  84%|████████▍ | 100/119 [03:19<00:12,  1.53it/s]\n",
+      "Inference:  85%|████████▍ | 101/119 [03:20<00:11,  1.53it/s]\n",
+      "Inference:  86%|████████▌ | 102/119 [03:20<00:11,  1.53it/s]\n",
+      "Inference:  87%|████████▋ | 103/119 [03:21<00:10,  1.53it/s]\n",
+      "Inference:  87%|████████▋ | 104/119 [03:22<00:09,  1.52it/s]\n",
+      "Inference:  88%|████████▊ | 105/119 [03:22<00:09,  1.52it/s]\n",
+      "Inference:  89%|████████▉ | 106/119 [03:23<00:08,  1.52it/s]\n",
+      "Inference:  90%|████████▉ | 107/119 [03:24<00:07,  1.52it/s]\n",
+      "Inference:  91%|█████████ | 108/119 [03:24<00:07,  1.52it/s]\n",
+      "Inference:  92%|█████████▏| 109/119 [03:25<00:06,  1.52it/s]\n",
+      "Inference:  92%|█████████▏| 110/119 [03:26<00:05,  1.52it/s]\n",
+      "Inference:  93%|█████████▎| 111/119 [03:26<00:05,  1.52it/s]\n",
+      "Inference:  94%|█████████▍| 112/119 [03:27<00:04,  1.52it/s]\n",
+      "Inference:  95%|█████████▍| 113/119 [03:28<00:03,  1.53it/s]\n",
+      "Inference:  96%|█████████▌| 114/119 [03:28<00:03,  1.53it/s]\n",
+      "Inference:  97%|█████████▋| 115/119 [03:29<00:02,  1.53it/s]\n",
+      "Inference:  97%|█████████▋| 116/119 [03:30<00:01,  1.53it/s]\n",
+      "Inference:  98%|█████████▊| 117/119 [03:30<00:01,  1.54it/s]\n",
+      "Inference:  99%|█████████▉| 118/119 [03:31<00:00,  1.54it/s]\n",
+      "Inference: 100%|██████████| 119/119 [03:33<00:00,  1.04it/s]\n",
+      "Inference: 100%|██████████| 119/119 [03:33<00:00,  1.79s/it]\n",
+      "all_predictions shape: (5, 3796)\n",
+      "all_probabilities shape: (5, 3796, 2)\n",
+      "Combination strategy is majority_vote. Computing the majority vote...\n",
+      "Average probabilities: [[9.6203023e-01 3.7969701e-02]\n",
+      " [9.9661177e-01 3.3882274e-03]\n",
+      " [9.9949443e-01 5.0556287e-04]\n",
+      " ...\n",
+      " [5.0586248e-03 9.9494135e-01]\n",
+      " [9.6969247e-02 9.0303075e-01]\n",
+      " [2.0188758e-02 9.7981131e-01]]\n",
+      "Results exported to: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2024-01-07_0851_VGG16_BN_Attention/ch1_majority_vote_val_ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42_2024-01-07_0851_VGG16_BN_Attention.csv\n",
+      "Figure(1500x600)\n",
+      "Majority vote AUC: 0.93031\n",
+      "Majority vote accuracy: 0.9307165437302424\n",
+      "Majority vote kappa: 0.8612831421894062\n",
+      "Target 0 - Precision: 0.91369, Recall: 0.95391, F-score: 0.93337, Sensitivity: 0.953909891248058, Specificity: 0.9067024128686327, Support: 1931\n",
+      "Target 1 - Precision: 0.95000, Recall: 0.90670, F-score: 0.92785, Sensitivity: 0.9067024128686327, Specificity: 0.953909891248058, Support: 1865\n",
+      "(   {   'accuracy': 0.9307165437302424,\n",
+      "        'auc': 0.9303061520583453,\n",
+      "        'fscore': [0.9333671142639979, 0.9278463648834019],\n",
+      "        'kappa': 0.8612831421894062,\n",
+      "        'precision': [0.9136904761904762, 0.95],\n",
+      "        'recall': [0.953909891248058, 0.9067024128686327],\n",
+      "        'sensitivity': [0.953909891248058, 0.9067024128686327],\n",
+      "        'specificity': [0.9067024128686327, 0.953909891248058],\n",
+      "        'support': [1931, 1865]},)\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = 'python ../inference.py --test_path \"../datasets/challenge1/val\" \\\n",
+    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2024-01-07_0851\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --ensemble \\\n",
+    "                    --report'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
   }
  ],
  "metadata": {
